syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.felipe.gadelha";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.felipe.gadelha;

import "google/protobuf/timestamp.proto";
import "google/rpc/Code.proto";

service KeyManagerService {
  rpc register (PixRq) returns (PixRs) {}
}

enum PixKeyType {
  UNRECOGNIZABLE = 0;
  CPF = 1;
  CEL_PHONE = 2;
  EMAIL = 3;
  RANDOM_KEY = 4;
}

enum AccountType {
  UNKNOWABLE = 0;
  SAVING = 1;
  CURRENT = 2;
}

message ExceptionDetails {
  string title = 1;
  int32 code = 2;
  string message = 3;
  google.rpc.Code status = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message ValidationExceptionDetails {
  string title = 1;
  int32 code = 2;
  string message = 3;
  google.rpc.Code status = 4;
  google.protobuf.Timestamp timestamp = 5;

  message Errors {
      string field = 1;
      repeated string detail = 2;
  }
  repeated Errors errors = 6;
}

message PixRq {
  string clientId = 1;
  string value = 2;
  PixKeyType keyType = 3;
  AccountType accountType = 4;
}

message PixRs {
  string pixId = 1;
}